# TrafficSignDetection

./: CMakeLists.txt  Classifier.cpp  Classifier.h  Detector.cpp  Detector.h  MultiScaleDetector.cpp  MultiScaleDetector.h  main.cpp
caffe_model/: V10.prototxt  V10_iter_60000.caffemodel  clas.prototxt  det.prototxt  detector.caffemodel
caffe_model/Classifier/: MC.prototxt
caffe_model/V13/: V13.prototxt  V13_iter_59000.caffemodel  V13_iter_90000.caffemodel
